# models2plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: package_and_release.yml
models2plugin/: __about__.py  __init__.py  generator.py  metadata.txt  plugin_main.py  qml_parser.py
models2plugin/gui/: dlg_settings.py  dlg_settings.ui  main_dlg.py  main_dlg.ui
models2plugin/resources/i18n/: plugin_translation.pro
models2plugin/template/plugin/: __init__.py  init_algorithm.py  metadata.txt  plugin_main.py  provider.py  qml_parser.py
models2plugin/toolbelt/: log_handler.py  preferences.py  utils.py
scripts/: generate_translation_profile.py
tests/: __init__.py  test_extract_qml_paths.py  test_replace_qml_paths.py
